--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -23,10 +23,11 @@
         <span id="contact-message-note" class="field-note">Message required</span>
       </div>
       <div class="modal-body-loading">
-        Sending...
+        <div class="modal-loading"></div>
+        <div class="modal-loading-label">Sending message...</div>
       </div>
       <div class="modal-body-sent">
-        Sent!
+        <div class="modal-sent-label">Message sent!</div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
