--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -3,4 +3,7 @@
   <button class="btn navbar-link header-button" data-toggle="modal" data-target="#contact-modal">
     Contact
   </button>
+  <button class="btn navbar-link header-button" data-toggle="modal" data-target="#info-modal">
+    Info
+  </button>
 </nav>
