Link to contact from info modal, clean up header view

--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -1,9 +1,5 @@
 <nav class='navbar navbar-inverse'>
   <span class='navbar-brand last-update'></span>
-  <button class="btn navbar-link header-button" data-toggle="modal" data-target="#contact-modal">
-    Contact
-  </button>
-  <button class="btn navbar-link header-button" data-toggle="modal" data-target="#info-modal">
-    Info
-  </button>
+  <a id="contact-link" class="header-link">Contact</a>
+  <a id="info-link" class="header-link">Info</a>
 </nav>
