--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/linker/styles/3p/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/linker/styles/3p/bootstrap.min.css">
     <link rel="stylesheet" href="/linker/styles/css/app.css">
+    <link rel="stylesheet" href="/linker/styles/css/header.css">
     <link rel="stylesheet" href="/linker/styles/css/modal.css">
     <link rel="stylesheet" href="/linker/styles/css/race_results.css">
     <link rel="stylesheet" href="/linker/styles/css/standings.css">
