--- a/assets/linker/templates/modal.html
+++ b/assets/linker/templates/modal.html
@@ -10,7 +10,9 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button disabled="disabled" type="button" class="btn btn-primary submit-button">Submit</button>
+        <% if (showSubmitButton) { %>
+          <button disabled="disabled" type="button" class="btn btn-primary submit-button">Submit</button>
+        <% } %>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
