--- a/assets/linker/templates/info_body.html
+++ b/assets/linker/templates/info_body.html
@@ -1,3 +1,9 @@
-This is ClubPointz.
-
+ClubPointz is a <a href="http://www.nyrr.org/">New York Road Runners</a> club points and race results viewer.
+<br><br>
+Information about the NYRR club points program can be found on the organization's website, <a href="http://www.nyrr.org/causes-and-community/local-clubs">here</a>.
+<br><br>
+Follow ClubPointz on <a href="http://www.twitter.com/clubpointz">Twitter</a>!
+<br><br>
+Want to contribute to ClubPointz? Fork our repo on <a href="https://github.com/cweezy/clubpointz">GitHub</a>.
+<br><br>
 Please use our <a id="info-contact-link">Contact Form</a> to send us your feedback.
