Don't fade in modals

--- a/assets/linker/templates/modal.html
+++ b/assets/linker/templates/modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="<%= modalId %>" tabindex="-1" role="dialog" aria-labelledby="<%= modalId %>" aria-hidden="true">
+<div class="modal" id="<%= modalId %>" tabindex="-1" role="dialog" aria-labelledby="<%= modalId %>" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
