--- a/assets/linker/styles/race_results.scss
+++ b/assets/linker/styles/race_results.scss
@@ -16,7 +16,10 @@
   min-width: 55px;
 }
 
-.age_place-cell, .gender_place-cell, .overall_place-cell {
+.age_place-cell,
+.gender_place-cell,
+.overall_place-cell,
+.heat_place-cell {
   max-width: 65px;
   min-width: 55px;
 }
