--- a/assets/linker/templates/race_results.html
+++ b/assets/linker/templates/race_results.html
@@ -24,4 +24,4 @@
   </div>
 </div>
 
-<table class='indiv-results table table-condensed table-hover table-bordered'></table>
+<div class='indiv-results'></div>
