--- a/assets/linker/templates/race_results_row.html
+++ b/assets/linker/templates/race_results_row.html
@@ -1,7 +1,6 @@
 <tr>
   <td class="place-cell"><%= place %></td>
   <% _.each(result, function (item, key) { %>
-    <% var classAttr = key == 'team' ? 'class="indiv-results"' : ''; %>
-    <td <%=classAttr %>><%= item %></td>
+    <td ><%= item %></td>
   <% }); %>
 </tr>
