--- a/assets/linker/templates/race_results.html
+++ b/assets/linker/templates/race_results.html
@@ -20,7 +20,20 @@
 </div>
 
 <div class='team-results'>
-  <div class='men-a-results'>
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#open-men-a" data-toggle="tab">Open Men A</a></li>
+    <li><a href="#open-women-a" data-toggle="tab">Open Women A</a></li>
+    <li><a href="#open-men-b" data-toggle="tab">Open Men B</a></li>
+    <li><a href="#open-women-b" data-toggle="tab">Open Women B</a></li>
+  </ul>
+
+    <!-- Tab panes -->
+  <div class="tab-content">
+    <div class="tab-pane active" id="open-men-a"></div>
+    <div class="tab-pane" id="open-women-a"></div>
+    <div class="tab-pane" id="open-men-b"></div>
+    <div class="tab-pane" id="open-women-b"></div>
   </div>
 </div>
 
