--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -1,5 +1,11 @@
 <nav class='navbar navbar-inverse'>
-  <span class='navbar-brand last-update'></span>
-  <a id="contact-link" class="header-link">Contact</a>
-  <a id="info-link" class="header-link">Info</a>
+  <div class="offsite-links">
+    <a href="https://twitter.com/clubpointz" id="twitter-link" class="header-link"><span class="fa fa-twitter"></span></a>
+    <a href="https://github.com/cweezy/clubpointz" id="github-link" class="header-link"><span class="fa fa-github"></span></a>
+  </div>
+
+  <div class="app-links">
+    <a id="info-link" class="header-link">Info</a>
+    <a id="contact-link" class="header-link">Contact</a>
+  </div>
 </nav>
